# nnreslib

./: .editorconfig  .gitignore  .isort.cfg  .pre-commit-config.yaml  Basic Usage.ipynb  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  somlib.py  test.py
.github/: labeler.yaml  release-draft-template.yaml
.github/workflows/: pr-labeler.yaml  release-drafter.yaml  release.yaml  tests.yaml
data/: cancer.csv  glass.csv  iris.npy  simple.csv  test.csv  thyroid.csv  train.csv  vine.csv
doc/: architecture.schema.json  model.schema.json
examples/: Basic Usage.ipynb  simple_sequence_architecture.json
nnreslib/: __main__.py  architecture.py  func.py  graph.py  model.py  neuralnet.py  settings.py
nnreslib/backend/: __init__.py  activation_functions.py  graph.py  loss_functions.py
nnreslib/backend/tf/: __init__.py  activation_functions.py  graph.py  loss_functions.py
nnreslib/graph/: __init__.py  forward_graph.py  graph.py  layers.py
nnreslib/graph/fit_graph/: __init__.py  adadelta.py  adagrad.py  adam.py  fit_graph.py  levenberg_marquardt.py  momentum.py  rmsprop.py  sgd.py
nnreslib/layers/: __init__.py  base2d_layer.py  base_conv_layer.py  base_layer.py  input_layer.py  layers.py  trainable_layer.py
nnreslib/utils/: hyperparametres.py  initialization.py  layers.py  log.py  merge.py  metrics.py  tf_helper.py  types.py  utils.py
nnreslib/utils/metrics/: __init__.py  categorial_metrics.py  metrics.py  regression_metrics.py
nnreslib/utils/serialized_types/: __init__.py  architecture.py  initialization.py  layer.py  merge.py  model.py  shape.py
requirements/: build.txt  dev.txt  extra.txt  linting.txt  main.txt  tests.txt
tests/: main_test.py  test_architecture.py  test_architecture_from_json.py  test_iris_2_outs_net.py  test_iris_net.py  test_layers.py  test_model.py  test_settings.py
tests/graph/: test_fit_graph.py
tests/layers/: test_base.py  test_base_conv.py  test_convolution.py  test_flatten.py  test_fully_connected.py  test_input.py  test_max_pool.py  test_trainable.py
tests/neuralnet/: test_check_arch.py
tests/utils/: test_initialization.py  test_layers.py  test_merge.py  test_metrics.py  test_types.py
tests/utils/merge/: test_merge_inputs.py  test_merge_shape_function.py
tests/utils/metrics/: test_categorial_metrics.py  test_metrics.py
tests/utils/types/: test_shape.py
utils/: hyperparametres.py  tf_helper.py
